# translatorFork_MOD

./: main.py  pyproject.toml  run_uv.sh
config/: api_providers.json
gemini_translator/api/handlers/: __init__.py  agentrouter.py
gemini_translator/core/worker_helpers/: error_analyzer.py
gemini_translator/ui/dialogs/: glossary.py
gemini_translator/ui/dialogs/glossary_dialogs/: custom_widgets.py
