[project]
name = "translatorfork-mod"
version = "10.5.18"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "aiohttp_socks",
    "beautifulsoup4",
    "certifi",
    "curl_cffi",
    "EbookLib",
    "edge-tts",
    "emoji",
    "flask",
    "fs",
    "fuzzywuzzy",
    "google-genai",
    "jieba",
    "loguru",
    "lxml",
    "nltk",
    "num2words",
    "playwright",
    "pydantic>=2.0.0",
    "pydub",
    "pymorphy3",
    "pypdf",
    "PyQt6",
    "PySocks",
    "python-docx",
    "python-Levenshtein",
    "pytz",
    "recognizers-text",
    "recognizers-text-number",
    "requests",
    "setuptools<81",
    "websockets",
    "werkzeug",
]

[project.optional-dependencies]
audio = [
    "PyAudio",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemini_translator"]
